--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@ p {
 .thumbnail .mask {
     opacity:0.85;
     filter: alpha(opacity=85);
-    top:100%;
+    top:-100%;
     left:0;
     width:100%;
     height:100%;
@@ -504,6 +504,13 @@ p {
     opacity: 0;
     display: none;
 }
+
+.buttonsGalery{
+    display: flex;
+    justify-content: center;
+    margin-top: 4em;
+    gap: 2em;
+}
 /*
 3.3 About
 ******************************************************************/
@@ -536,6 +543,14 @@ p {
     padding: 10px;
     font-size: 16px;
     text-align: justify;
+}
+.iconsPortfolio{
+    width: 30px;
+    filter:invert(1)
+}
+
+.iconsPortfolio:hover{
+    filter:invert(0)
 }
 /*********************************************************************
                         SKILLS BAR
@@ -826,7 +841,19 @@ p {
     color:#181A1C;
 }
 
+.iconsContact{
+    width: 30px;
+    border-radius: 50%;
+    filter:invert(1);
+    transition: .5s;
 }
+
+.iconsContact:hover{
+    transform: scale(1.2);
+}
+
+
+
 
 /*
 3.8 Footer
